fixed video sizes on mobile design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,10 @@ body{
 
 h3{
 margin: 12px 0 18px;
+font-family: 'Oswald', sans-serif;
+text-transform: uppercase;
+letter-spacing: 3px;
+color: #202020;
 }
 
 h3 span{
@@ -42,7 +46,7 @@ h3 span{
    padding: 10px;
 }
 
-.navbar-brand, h2, h3{
+.navbar-brand{
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -100,6 +104,7 @@ h3 span{
     font-family: inherit;
     color: inherit;
     margin-left: 6px;
+    margin-right: 6px;
     font-weight: bold;
     text-align: justify;
 }
@@ -128,10 +133,9 @@ h3 span{
 
 /*music page*/
 
-.music-container, .live-container{
+.music-container{
     font-family: inherit;
     color: inherit;
-    margin-left: 6px;
     font-weight: bold;
     text-align: justify;
 }
@@ -148,6 +152,7 @@ h3 span{
 
 .video{
     display: inline;
+    overflow: hidden;
 }
 
 /*gallery page*/
@@ -269,6 +274,12 @@ font-size: 18px;
 }
 
 /*media queries for music page*/
+
+@media screen and (max-width:800px){
+    .video iframe{
+       width: 95%;   
+    }
+}
 
 
 /*media queries for gallery page*/
